package org.example;

public interface Calc {
    double operate(String input);
}



